# sniperforge

./: .env  .env.example  .gitattributes  .gitignore  ACCION_4_TRADING_REAL_COMPLETADO.md  ACCION_5_MEV_ENHANCEMENT_COMPLETADO.md  ACCION_5_MEV_ENHANCEMENT_READY.md  ACCION_5_MEV_IMPLEMENTATION_PLAN.md  ACCION_6_DEX_SPECIALIZATION_READY.md  ACCION_6_SUCCESS_REPORT.md  ACCION_7_COMPLETADA_EXITOSAMENTE.md  ADVANCED_ARBITRAGE_STRATEGIES_EXPERT_KNOWLEDGE.md  ALL_ERRORS_FIXED_SUCCESS.md  ALTERNATIVAS_MAS_RENTABLES_SOLANA.md  ANALISIS_CALIDAD_SISTEMA.md  ANALISIS_CRITICO_OPERACIONAL.md  ANALISIS_LOGS_MEJORAS.md  ANALISIS_LOG_DETALLADO.md  ANALISIS_LOG_OPTIMIZACIONES.md  ANALISIS_MAINNET_ESPECTACULAR.md  ANALISIS_NO_TRADES.md  ANALISIS_OLD_ARCHIVE_MIGRATION.md  ANALISIS_PROBLEMAS_Y_MEJORAS.md  ANALISIS_SIMULACION_DIAGNOSTICA.md  ANALISIS_SISTEMA_REAL_VS_ROADMAP.md  ARBITRAGE_AUDIT_ANALYSIS.md  ARBITRAGE_BOT_COMMERCIAL_PRESENTATION.html  ARBITRAGE_BOT_COMMERCIAL_PRESENTATION.md  ARBITRAGE_BOT_READY.md  ARBITRAGE_BOT_TUNEUP.md  ARBITRAGE_COMPLETE_DOCUMENTATION.md  ARBITRAGE_DIAGNOSIS_CRITICAL.md  ARBITRAGE_FINAL_SUMMARY.md  ARBITRAGE_FIXED_SUCCESS.md  ARBITRAGE_QUICK_REFERENCE.md  ARBITRAGE_SOLID_PLAN.md  ARBITRAGE_STRATEGY_DOCUMENTATION.md  AUDITORIA_CODIGO_REAL.md  AUDITORIA_COMPLETA_REPORT.md  AUDITORIA_CRITICA_ENTERPRISE_2025.md  (+601 more)
.cargo/: config.toml
benches/: performance.rs  performance_new.rs
bots/arbitrage-basic/: .env.mainnet  Cargo.toml  wallet-demo.json
bots/arbitrage-basic/src/: main_backup.rs
config/: bot_templates.json  capital_accumulation_config.json  devnet-cross.json  devnet.toml  jupiter_config.json  liquidity_sniper_bot_config.json  liquidity_sniper_config.json  mainnet.json  mainnet.toml  network_config.json  platform.toml  small_capital_config.json  system.json  system.yaml  twitter_config.json  twitter_config_template.json  unified_routing_config.json
data/: arbitrage_routes_optimized.json  real_time_routes.json  realtime_routes.json
development/: CONTEXTO_COMPLETO_DESARROLLO.md  COPILOT_GUIDELINES.md  CORRECIONES_IMPLEMENTADAS_100_REAL.md  MIGRACION_SHARED_COMPONENTS_COMPLETADA.md  PLAN_SISTEMATICO_ELIMINACION_WARNINGS.md  TODOS_CRITICOS_CORREGIDOS_REPORTE.md
docs/: API_DOCUMENTATION_ENTERPRISE.md  COMPLETE_STATUS_OVERVIEW.md  CRASH_ANALYSIS_REPORT.md  DATOS_REALES_VERIFICATION.md  DOCUMENTATION_MASTER_INDEX.md  DOCUMENTATION_MASTER_INDEX_UPDATED.md  DOCUMENTATION_STRUCTURE_OVERVIEW.md  DOCUMENTATION_UPDATE_STATUS.md  MASTER_DEVELOPMENT_ROADMAP_2025.md  MOCK_CODE_AUDIT_REPORT.md  ORGANIZACION_ARCHIVOS.md  PHASE_5_COMPLETION_REPORT.md  PHASE_6B_ML_IMPLEMENTATION_PLAN.md  PLAN_LIQUIDITY_SNIPER_BOT.md  PLAN_MEJORA_ARQUITECTURAL_2025.md  QUICK_START.md  README.md  REORGANIZATION_REPORT.md  TIME_UNITS_QUICK_REFERENCE.md  VSCODE_ANTI_CRASH_GUIDE.md  WARNINGS_CORRECTION_SUMMARY.md  configuration.md  development-roadmap.md  project-summary.md
examples/: migrated_arbitrage_bot.rs  real_trading_integration.rs
k8s/: enhanced-arbitrage-bot-deployment.yaml
modules/: automated_monitor.rs  cex_dex_arbitrage.rs  dex_specialization.rs  enterprise_auto_scanner.rs  enterprise_auto_scanner_real.rs  enterprise_multi_source.rs  jupiter_advanced.rs  jupiter_scanner.rs  mev_protection.rs  mod.rs  real_execution.rs  safe_testing.rs
old-root-archive/: .gitignore  Cargo.toml  README.md  verify_mainnet_config.ps1
organized/: REORGANIZATION_PLAN.md
scripts/: continuous-arbitrage.ps1  quick-fix.ps1  verify-corrections.ps1
sdk/: package.json  tsconfig.json
sniperforge-suite/: Cargo.toml  README.md
sniperforge-suite/.github/workflows/: ci.yml  release.yml
sniperforge-suite/bots/arbitrage-basic/: .env.mainnet  Cargo.toml
sniperforge-suite/bots/arbitrage-basic/src/: main.rs  main_migrated.rs
sniperforge-suite/core/: Cargo.toml
sniperforge-suite/core/src/: lib.rs
sniperforge-suite/core/src/analytics/: ai_engine.rs  ml_pattern_recognition.rs  mod.rs  performance_analytics.rs
sniperforge-suite/core/src/apis/: dexscreener.rs  mod.rs  price_feeds.rs  rate_limiter.rs  real_price_feeds.rs
sniperforge-suite/core/src/config/: mod.rs
sniperforge-suite/core/src/security/: mod.rs  risk_manager.rs
sniperforge-suite/core/src/trading/: arbitrage.rs  cross_chain.rs  enhanced_system.rs  flash_loan.rs  mod.rs  portfolio.rs  risk.rs  triangular.rs
sniperforge-suite/core/src/types/: mod.rs
sniperforge-suite/core/src/utils/: mod.rs
sniperforge-suite/tests/: integration.rs
sniperforge-suite/tools/: setup-dev.sh
src/: advanced_performance_optimizer.rs  advanced_real_trading.rs  alternative_apis_test.rs  arbitrage_bot_phase45_integrated.rs  arbitrage_settings.rs  cache_safety_test.rs  cli.rs  cli_backup.rs  cli_corrupted_backup.rs  cli_old_corrupted.rs  cli_phase6a.rs  cli_simple.rs  config.rs  dex_integration.rs  dex_integration_simple.rs  dexscreener_testing.rs  enhanced_pool_discovery.rs  event_driven_integration.rs  fee_calculator.rs  jupiter_integration.rs  jupiter_integration_real.rs  jupiter_integration_simple.rs  jupiter_real_client.rs  jupiter_speed_test.rs  jupiter_v6_client.rs  lib.rs  main.rs  main_phase6a.rs  mev_integration.rs  mev_integration_simple.rs  ml_integration_advanced.rs  ml_pattern_recognition.rs  multi_dex_scanner.rs  multi_token_manager.rs  optimized_real_price_feeds.rs  orchestration.rs  phase1.rs  phase4_demo.rs  real_arbitrage_engine.rs  real_price_feeds.rs  (+13 more)
state/: system_state.json
test_orca_standalone/: Cargo.toml  test_orca_devnet_simple.rs
tests/: advanced_mock_framework.rs  advanced_mock_framework_v3.rs  arbitrage_consolidation_integration_test.rs  basic_working_tests.rs  common.rs  comprehensive_enterprise_tests.rs  enterprise_strategy_tests.rs  extended_integration_tests.rs  extended_integration_tests_corrected.rs  extended_integration_tests_v2.rs  extended_integration_tests_v3.rs  final_system_integration.rs  high_coverage_unit_tests.rs  integration.rs  integration_tests.rs  ml_advanced_features.rs  mod.rs  qa_runner.rs  qa_runner_final.rs  qa_runner_safe.rs  qa_runner_simple.rs  simple_security_test.rs  smoke_tests.rs  (+5 more)
(+843 files in other folders)
