[package]
name = "sniperforge"
version = "1.0.0"
edition = "2021"
authors = ["SniperForge Team"]
license = "MIT"
repository = "https://github.com/juant72/sniperforge"
homepage = "https://github.com/juant72/sniperforge"
documentation = "https://docs.rs/sniperforge"
description = "Professional trading bot suite for Solana DeFi"
keywords = ["solana", "defi", "trading", "arbitrage", "bot"]
categories = ["finance", "cryptography::cryptocurrencies"]

[dependencies]
# Core Solana dependencies
solana-client = "2.2"
solana-sdk = "2.2"
solana-program = "2.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Math and numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Utilities
rand = "0.8"
dashmap = "6.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true

[profile.release]
debug = 0
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
debug = 2
opt-level = 1

[profile.bench]
debug = false
opt-level = 3
lto = true
