[package]
name = "sniperforge"
version = "1.0.0"
edition = "2021"
authors = ["SniperForge Team"]
license = "MIT"
repository = "https://github.com/juant72/sniperforge"
homepage = "https://github.com/juant72/sniperforge"
documentation = "https://docs.rs/sniperforge"
description = "Professional trading bot suite for Solana DeFi"
keywords = ["solana", "defi", "trading", "arbitrage", "bot"]
categories = ["finance", "cryptography::cryptocurrencies"]

[dependencies]
# Core Solana dependencies
solana-client = "2.2"
solana-sdk = "2.2"
solana-program = "2.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration and environment
config = "0.14"
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Math and numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.8"
dashmap = "6.1"

# Security and cryptography dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
jsonwebtoken = "9.3"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
url = "2.5"
getrandom = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bip39 = "2.0"
tempfile = "3.8"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true

[profile.release]
debug = 0
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
debug = 2
opt-level = 1

[profile.bench]
debug = false
opt-level = 3
lto = true
