[package]
name = "sniperforge"
version = "1.0.0"
edition = "2021"
authors = ["SniperForge Team"]
license = "MIT"
repository = "https://github.com/juant72/sniperforge"
homepage = "https://github.com/juant72/sniperforge"
documentation = "https://docs.rs/sniperforge"
description = "Professional trading bot suite for Solana DeFi"
keywords = ["solana", "defi", "trading", "arbitrage", "bot"]
categories = ["finance", "cryptography::cryptocurrencies"]

[dependencies]
# Core Solana dependencies
solana-client = "2.2"
solana-sdk = "2.2"
solana-program = "2.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration and environment
config = "0.15.11"
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Web framework for API Gateway
actix-web = "4.4"

# Math and numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# System utilities
num_cpus = "1.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.8"
bs58 = "0.5"
dashmap = "6.1"
fastrand = "2.0"

# High-performance concurrency for HFT
crossbeam-queue = "0.3"
parking_lot = "0.12"

# Machine Learning and AI Dependencies for Phase 6
candle-core = "0.9"
candle-nn = "0.9"
ndarray = "0.16"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"
linfa-nn = "0.7"
smartcore = "0.4"
polars = { version = "0.49", features = ["lazy", "temporal", "random", "sql"] }
tokenizers = "0.21"
hf-hub = "0.4"

# Statistical analysis
statrs = "0.16"

# Async trait support
async-trait = "0.1"

# Social Media and News APIs for Real Sentiment Analysis
scraper = "0.18"  # Web scraping for news
html2text = "0.12"  # HTML to text conversion
urlencoding = "2.1"  # URL encoding for search queries

# Security and cryptography dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
jsonwebtoken = "9.3"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
url = "2.5"
getrandom = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bip39 = "2.0"
tempfile = "3.8"
log = "0.4"

# ===== ENTERPRISE CLI & MONITORING DEPENDENCIES =====
# CLI Enterprise Framework
clap = { version = "4.0", default-features = false, features = ["derive", "std"] }
console = { version = "0.15", default-features = false }
colored = { version = "3.0.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = ["windows"] }

# Advanced Logging
tracing-appender = { version = "0.2", default-features = false }

# Metrics & Monitoring
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
sysinfo = "0.35.2"

# Lightweight HTTP Client
ureq = { version = "3.0.12", features = ["json"] }

# External CLI binary
[[bin]]
name = "sniperforge-cli"
path = "src/bin/sniperforge_cli.rs"

# Interactive CLI binary
[[bin]]
name = "sniperforge-interactive"
path = "src/bin/sniperforge_interactive.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true

[profile.release]
debug = 0
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
debug = 2
opt-level = 1

[profile.bench]
debug = false
opt-level = 3
lto = true
