[workspace]
members = [
    "core",
    # Future bots will be added here
    # "bots/arbitrage-pro",
    # "shared/types",
    # "tools/config-generator",
]

resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["SniperForge Team"]
license = "MIT"
repository = "https://github.com/juant72/sniperforge"
homepage = "https://github.com/juant72/sniperforge"
documentation = "https://docs.rs/sniperforge"
description = "Professional trading bot suite for Solana DeFi"
keywords = ["solana", "defi", "trading", "arbitrage", "bot"]
categories = ["finance", "cryptography::cryptocurrencies"]

[workspace.dependencies]
# Core Solana dependencies
solana-client = "2.2"
solana-sdk = "2.2"
solana-program = "2.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Math and numbers
rust_decimal = { version = "1.33", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Security
rand = "0.8"
sha2 = "0.10"

# Performance
rayon = "1.10"
dashmap = "6.1"

# Testing
proptest = "1.5"
mockall = "0.13"

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true

[profile.release]
debug = 0
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
debug = 2
opt-level = 1

[profile.bench]
debug = false
opt-level = 3
lto = true
