[package]
name = "sniperforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core library for SniperForge trading bot suite"

[dependencies]
# Workspace dependencies
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
config.workspace = true
rand.workspace = true
dashmap.workspace = true

# Core-specific dependencies
async-trait = "0.1"
url = "2.5"
base64 = "0.22"
bs58 = "0.5"

[features]
default = ["jupiter", "orca", "raydium"]
jupiter = []
orca = []
raydium = []
mev = []
flashloans = []
